Fix pdf not working on mobile browsers

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -4,10 +4,11 @@
   margin-top: 25px;
 }
 
-.resume embed {
+.resume iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  border: none;
 }
